tests/health/gold/sdk/tests__lsp__double_import__shared__shared.toit.gold
tests/lsp/double_import/shared/shared.toit:5:8: error: Package for prefix 'pkg' not found
import pkg
       ^~~
tests/lsp/double_import/shared/shared.toit:7:17: error: Unresolved type: 'PkgType'
identify -> pkg.PkgType?:
                ^~~~~~~
